<resources>
    <string name="app_name">Footprint for life</string>
    <string name="short_lorem_ipsum">LOREM IPSUM DOLOR</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur ipsum in placerat molestie.  Fusce quis mauris a enim sollicitudin
        \n\nLorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur ipsum in placerat molestie.  Fusce quis mauris a enim sollicitudin
    </string>
    <string name="about">About</string>
    <string name="about_last_update">Last Update</string>
    <string name="about_last_update_info">August 2024</string>
    <string name="about_main_idea">Original Idea</string>
    <string name="about_website">Website</string>
    <string name="about_developer_by">Developed by</string>
    <string name="copyrights">Zonassoft, all rights reserved</string>
    <string name="info">Introduction</string>
    <string name="help">Help</string>
    <string name="not_internet">there is no internet conection</string>
    <string name="not_server">could no connet to server</string>
    <string name="DETAILS">DETAILS</string>
    <string name="description">Description</string>
    <string name="NEXT">NEXT</string>
    <string name="GOT_IT">GOT IT</string>
    <string name="GO">GO</string>
    <string name="SKIP">SKIP</string>
    <string name="SAVE">SAVE</string>
    <string name="medium_lorem_ipsum">Quisque imperdiet nunc at massa dictum volutpat. Etiam id orci ipsum. Integer id ex dignissim</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="logo_footprint">"  FOOTPRINT"</string>
    <string name="logo_for">"FOR\n"</string>
    <string name="logo_life">" LIFE"</string>
    <string name="steps_know_title">Know</string>
    <string name="steps_do_title">Act</string>
    <string name="steps_share_title">Promote</string>
    <string name="steps_know_desc">Know your carbon emissions and their effects.</string>
    <string name="steps_do_desc">Act to reduce them.</string>
    <string name="steps_share_desc">Promote the global change we need.</string>
    <string name="results_tag_etica">ETHICAL</string>
    <string name="results_tag_country">COUNTRY</string>
    <string name="results_tag_world">WORLD</string>
    <string name="results_tag_activities">ACTIVITIES</string>
    <string name="results_tag_info">TOUCH TO SHARE</string>
    <string name="calculator_title">personal data</string>
    <string name="results_title">footprint profile</string>
    <string name="plan_title">reduction plan</string>
    <string name="activities_title">ways to reduce</string>
    <string name="chart_personal">Personal</string>
    <string name="chart_country">Country</string>
    <string name="chart_world">World</string>
    <string name="chart_etical">Ethical</string>
    <string name="chart_days_lost">Days lost</string>
    <string name="chart_life_days">Life days</string>
    <string name="chart_present">Present</string>
    <string name="chart_eco">Eco-committed</string>
    <string name="chart_desc_val">Value: </string>
    <string name="chart_parties_transport">TRANSPORT</string>
    <string name="chart_parties_electricity">ELECTRICITY</string>
    <string name="chart_parties_diet">DIET</string>
    <string name="chart_parties_heating">HEATING</string>
    <string name="chart_parties_other">OTHER</string>
    <string name="chart_parties_accumulated">ACCUMULATED</string>
    <string name="chart_parties_future">FUTURE</string>
    <string name="chart_parties_days_lost">YEARS LOST</string>
    <string name="chart_parties_income">INCOME</string>
    <string name="chart_parties_emissions">CARBON EMISSIONS</string>
    <string name="chart_parties_trees">TREES</string>
    <string name="chart_parties_by_bus">by bus</string>
    <string name="chart_parties_by_motor">by motorbike</string>
    <string name="chart_parties_by_car">by car</string>
    <string name="chart_parties_by_airplane">by airplane</string>
    <string name="chart_parties_by_train">by train</string>
    <string name="chart_parties_by_electricity">by electricity</string>
    <string name="chart_parties_by_diet">by diet</string>
    <string name="chart_parties_by_heating">by heating</string>
    <string name="chart_parties_by_other">by other</string>
    <string name="info_why">Why?</string>
    <string name="info_what">What?</string>
    <string name="info_how">How?</string>
    <string name="info_who">Who?</string>
    <string name="info_why_title_a">Privileges come with responsibilities.</string>
    <string name="info_why_desc_a">\n Out of the 500 generations of Humanity, since the first agricultural settlements, ours in this beginning of the XXIst century, is the one with highest  average of wellbeing, life expectancy and access to knowledge.\nWhile it also bears the highest levels of injustice, inequality and damage to our planet and all its life species.</string>
    <string name="info_why_title_b">Humanity must stop burning fossil fuels.</string>
    <string name="info_why_desc_b">\n Changing our lifestyle and halting the burning of fossil fuels (result of sediments of thousands of millions of years yet burnt at a rate 10,000 times higher) is vital for the survival of our species and the rest, innocent, of forms of life in planet Earth.</string>
    <string name="info_why_title_c">Our individual contribution is an ethical obligation.</string>
    <string name="info_what_title_a">Know your carbon emissions (footprint) and their effects, act to reduce them and promote the global change we need.</string>
    <string name="info_what_desc_a">\n This app will help you:\n<ul>\n<li>estimate your personal carbon emissions to the atmosphere</li>\n<li>compare them with your country and the world average, as well as with the "<b>ethical threshold</b>"</li>\n<li>know the impact excess emissions will cause  in the coming human generations  and to other firms of life</li>\n<li>explore ways in which you can reduce and mitigate your emissions</li>\n<li>draw a progressive plan to a low or no carbon life</li></ul>\n\nAnd so know which may be your carbon footprint through life, the damage you can prevent doing by reducing your emissions and ways to disseminate your commitment towards a global transformation towards a Humanity clean if carbon emissions and repairing the damage we have inflicted in our planet.</string>
    <string name="info_what_title_b">Ethical threshold </string>
    <string name="quest_transport_title">transport</string>
    <string name="quest_electricity_title">electricity</string>
    <string name="quest_heating_title">heating</string>
    <string name="quest_diet_title">diet</string>
    <string name="quest_other_title">other</string>
    <string name="register_info">Configure the initial data so that you know and plan your carbon footprint</string>
    <string name="register_hello">Hello</string>
    <string name="register_name">Name</string>
    <string name="register_age">Age</string>
    <string name="register_country">Country</string>
    <string name="info_cal_intro">When entering each of the following data, the app calculates carbon emissions by each type of activity.</string>
    <string name="info_cal_transport">Here we apply the average conversion factors for each type of transport, of carbon emissions by kilometer travelled.\n\n These factors also depend on the type of engine, its age, the kind of fuel, speed, weight and altitude above sea level, factors which, for the moment, and for the sake of simplicity and to result in a user-friendly app, have not been included in the calculation.</string>
    <string name="info_cal_electricity">Here we apply the national average consumption levels in kilowatts-hour, the proportion of renewable sources in the electricity matrix and the national average energy (carbon emissions by watt-hour) in each country, to the household monthly consumption of kilowatts-hour and the persons living in the it, deducting the share of individual renewable sources if present.\n\n In case of not knowing for the moment the consumption in kilowatts-hour  (reflected in the electricity bill) there is an option to estimate a low, average of high consumption vs. The national average.</string>
    <string name="info_cal_heating">Here we apply the national levels of fuel consumption per person, to the energy carbon efficiency (carbon emissions by mass/volume of fuel) of each type of fossil fuels, people living in the household and the proportion of heating supplied by individual renewable sources.\n\n In case of not knowing for the moment the exact monthly heating fuel consumption (reflected in the  gas bill or others) there is an option to estimate the relation - low, average or high - with the national average consumption.</string>
    <string name="info_cal_diet">One important parte if our personal carbon emissions is related to our daily food consumption.\n\n Here we take into account the national estimates of carbon emissions by the agro-industry, the proportion of imported food in the country and the ratios (relations with average carbon emissions by food production and consumption) of the types of diets, from those of high, average or low animal and dairy content (related with higher emissions) to those vegetarian and vegan.\n\n It is then adjusted to the proportion estimated of food from non-local origin (usually packaged).\n\n These factors will depend on the type of food, use of fertilizers and plaguicides, use of GMOs, distance from production site to final consumer and other factors which, for the moment, and for the sake of simplicity and to result in a user-friendly app, have not been included in the calculation.</string>
    <string name="info_cal_others">The individual level of income is related to the expenses in purchasing goods and services, and to the level of savings.\n\n We estimated the carbon emissions related to the overall national average consumption (using gross domestic product -GDP- per capita), the proportion of consumption other than  transport, electricity, heating and food, and the proportion of the national economy depending on global trade, so as to estimate the level of carbon emissions in purchasing those other goods and services.</string>
</resources>