<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/mdtp_white"
    android:id="@+id/parent_view"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/futura_medium_bt"
            android:text="@string/logo_footprint"
            android:autoSizeMaxTextSize="@dimen/abc_logo"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="@dimen/abc_logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/futura_medium_bt"
                android:text="@string/logo_for"
                android:gravity="right"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/futura_medium_bt"
                android:text="@string/logo_life"
                android:textColor="@android:color/black"
                android:textSize="@dimen/abc_logo"
                android:autoSizeMaxTextSize="@dimen/abc_logo"/>
        </LinearLayout>

    </LinearLayout>


</LinearLayout>
